Graph server proxy 추가 및 수정
